# grpc_test

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client_test.cpp
example/: msg.proto
example/client/: CMakeLists.txt  client.cpp
example/message/: msg.grpc.pb.cc  msg.grpc.pb.h  msg.pb.cc  msg.pb.h
example/server/: CMakeLists.txt  main.cpp
proto/: make_proto.sh  service_test.proto
proto/service_test_message/: service_test.grpc.pb.cc  service_test.grpc.pb.h  service_test.pb.cc  service_test.pb.h
server/: CMakeLists.txt  server_test.cpp
